--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paragliding App</title>
   </head>
-  <body>
+  <body style="background-color: #f5f5f5;">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
