--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Paragliding App</title>
+    <title>Cloudy</title>
   </head>
   <body style="background-color: #f5f5f5;">
     <div id="app"></div>
